2007-12-05:
	* src/v5.c(v5_alloc_get_init_creds_opt): call the library's struct
	init function for the we-malloc-it case.
	* src/initopts.c(_pam_krb5_set_init_opts): disable the library's own
	change-password-during-get_init_creds behavior, if we're building with
	one which lets us disable it, so that we can handle it ourselves.

2007-12-04:
	* src/options.c(option_b): take a service name, and a default enable
	and disable list.  If we have no command-line argument, check for the
	service's name in the list of values given in the config file, then
	check for a regular boolean setting in the configuration file, and
	lastly check our default configuration using the default enable and
	disable lists.
	* src/pam_krb5.5.in,src/pam_krb5.8.in: note that boolean options take
	lists of service names now.

2007-11-09:
	* src/auth.c: fetch tokens when "tokens" is enabled and we're not
	configured to use krb4, instead of not doing anything like that
	* src/auth.c(pam_sm_authenticate): fetch tokens (if we haven't
	already) before checking the user's .k5login with krb5_kuserok()
	* src/acct.c(pam_sm_acct_mgmt): fetch tokens before checking the
	user's .k5login with krb5_kuserok()

2007-11-08:
	* src/stash.c: if we're about to create a ccache with a name identical
	to one which we've already created (and haven't since destroyed), try
	to make the name unique by appending a "_" to it (mainly for keyrings).
	When creating a temporary FILE: ccache, use mkstemp() to generate the
	file so that mkstemp patterns don't get used literally.  When removing
	a ccache, treat EKEYREVOKED when resolving the ccache as a successful
	result.
	* src/*.c: when printing UIDs and GIDs, case to "unsigned long long"
	if available.
	* src/auth.c,src/acct.c,src/session.c: skip "minimum_uid" checks when
	"no_user_check" was given, in which case we can't know the user's UID.
	* configure.ac: fix some of the help text. make use of keyutils
	something we can issue an error for if the library isn't detected,