@@ -153,6 +153,11 @@ only in cases where one is needed.
 .IP no_subsequent_prompt
 tells pam_krb5.so to only provide the previously-entered password in response
 to any request for a password which the Kerberos library might make.
+If the calling application does not properly support PAM conversations
+(possibly due to limitations of a network protocol which it is serving),
+this may be need to be used to prevent the application
+from supplying the user's current password in a password-changing
+situations when a new password is called for.
 
 .IP no_user_check
 tells pam_krb5.so to not check if a user exists on the local system, to skip
